--- a/app/renderer/index.css
+++ b/app/renderer/index.css
@@ -8,6 +8,31 @@
   --font-*: initial;
   --font-sans: Roboto;
 
+  /* Background Colors */
+  --color-background-base: #121212;
+  --color-background-highlight: #1f1f1f;
+  --color-background-click: #000000;
+  --color-background-surface-base: #181818;
+  --color-background-surface-highlight: #262626;
+  --color-background-surface-click: #424242;
+  --color-background-glass-base: rgba(0, 0, 0, 0.1);
+  --color-background-glass-highlight: rgba(0, 0, 0, 0.14);
+  --color-background-glass-click: rgba(0, 0, 0, 0.21);
+
+  /* Text Colors */
+  --color-text-primary: #ffffff;
+  --color-text-secondary: #a3a3a3;
+  --color-text-dark: #737373;
+
+  /* Essential Colors */
+  --color-essential-base: #ffffff;
+  --color-essential-accent: #22c55e;
+  --color-essential-subdued: #7c7c7c;
+  --color-essential-danger: #bd0000;
+  --color-essential-info: #5db6dc;
+  --color-essential-success: #009f55;
+  --color-essential-warning: #ffc107;
+
   --breakpoint-*: initial;
   --breakpoint-xs: 1024px;
   --breakpoint-sm: 1280px;
@@ -48,24 +73,6 @@
   }
 }
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
-  }
-}
-
 @layer base {
   body {
     color: white;
@@ -74,32 +81,5 @@
 
   ::-webkit-scrollbar {
     width: 0;
-  }
-
-  :root {
-    /* Background Colors */
-  --background-base: #121212;
-  --background-highlight: #1f1f1f;
-  --background-click: #000000;
-  --background-surface-base: #181818;
-  --background-surface-highlight: #262626;
-  --background-surface-click: #424242;
-  --background-glass-base: rgba(0, 0, 0, 0.1);
-  --background-glass-highlight: rgba(0, 0, 0, 0.14);
-  --background-glass-click: rgba(0, 0, 0, 0.21);
-
-  /* Text Colors */
-  --text-primary: #ffffff;
-  --text-secondary: #a3a3a3;
-  --text-dark: #737373;
-
-  /* Essential Colors */
-  --essential-base: #ffffff;
-  --essential-accent: #22c55e;
-  --essential-subdued: #7c7c7c;
-  --essential-danger: #BD0000;
-  --essential-info: #5DB6DC;
-  --essential-success: #009F55;
-  --essential-warning: #ffc107;
   }
 }
