--- a/app/renderer/index.css
+++ b/app/renderer/index.css
@@ -5,20 +5,19 @@
 @plugin 'tailwindcss-animate';
 
 @theme {
-  --font-*: initial;
   --font-sans: Roboto;
 
   /* Background Colors */
-  --color-background-base: #000000;
-  --color-background-surface-base: #121212;
-  --color-background-surface-highlight: #242424;
-  --color-background-surface-click: #363636;
-  --color-background-elevated-base: #181818;
-  --color-background-elevated-highlight: #262626;
-  --color-background-elevated-click: #343434;
-  --color-background-glass-base: hsla(0, 0%, 0%, 0.6);
-  --color-background-glass-highlight: hsla(0, 0%, 0%, 1);
-  --color-background-glass-click: hsla(0, 0%, 0%, 0.8);
+  --color-background: #000000;
+  --color-surface-base: #121212;
+  --color-surface-highlight: #242424;
+  --color-surface-active: #363636;
+  --color-elevated-base: #181818;
+  --color-elevated-highlight: #262626;
+  --color-elevated-active: #343434;
+  --color-glass-base: hsla(0, 0%, 0%, 0.6);
+  --color-glass-highlight: hsla(0, 0%, 0%, 1);
+  --color-glass-active: hsla(0, 0%, 0%, 0.8);
 
   /* Text Colors */
   --color-text-primary: #ffffff;
@@ -27,12 +26,12 @@
   --color-text-black: #000000;
 
   /* Essential Colors */
-  --color-essential-base: #ffffff;
-  --color-essential-accent: #00c850;
-  --color-essential-danger: #bd0000;
-  --color-essential-info: #5db6dc;
-  --color-essential-success: #009f55;
-  --color-essential-warning: #ffc107;
+  --color-base: #ffffff;
+  --color-accent: #00c850;
+  --color-danger: #bd0000;
+  --color-info: #5db6dc;
+  --color-success: #009f55;
+  --color-warning: #ffc107;
 
   --breakpoint-*: initial;
   --breakpoint-xs: 1024px;
