--- a/app/renderer/index.css
+++ b/app/renderer/index.css
@@ -1,4 +1,5 @@
 @import url('assets/fonts/Roboto.css') layer(base);
+@import url('themes.css') layer(theme);
 
 @import 'tailwindcss';
 
@@ -8,34 +9,34 @@
   --font-sans: Roboto;
 
   /* Background Colors */
-  --color-background: #000000;
-  --color-surface-base: #121212;
-  --color-surface-highlight: #242424;
-  --color-surface-active: #363636;
-  --color-elevated-base: #181818;
-  --color-elevated-highlight: #262626;
-  --color-elevated-active: #343434;
-  --color-glass-base: hsla(0, 0%, 0%, 0.6);
-  --color-glass-highlight: hsla(0, 0%, 0%, 1);
-  --color-glass-active: hsla(0, 0%, 0%, 0.8);
+  --color-background: var(--background);
+  --color-surface-base: var(--surface-base);
+  --color-surface-highlight: var(--surface-highlight);
+  --color-surface-active: var(--surface-active);
+  --color-elevated-base: var(--elevated-base);
+  --color-elevated-highlight: var(--elevated-highlight);
+  --color-elevated-active: var(--elevated-active);
+  --color-glass-base: var(--glass-base);
+  --color-glass-highlight: var(--glass-highlight);
+  --color-glass-active: var(--glass-active);
 
   /* Text Colors */
-  --color-text-primary: #ffffff;
-  --color-text-secondary: #878787;
-  --color-text-sub: #333333;
-  --color-text-black: #000000;
+  --color-text-primary: var(--text-primary);
+  --color-text-secondary: var(--text-secondary);
+  --color-text-sub: var(--text-sub);
+  --color-text-black: var(--text-black);
 
   /* Essential Colors */
-  --color-base: #ffffff;
-  --color-accent: #00c850;
-  --color-danger: #bd0000;
-  --color-info: #5db6dc;
-  --color-success: #009f55;
-  --color-warning: #ffc107;
+  --color-base: var(--base);
+  --color-accent: var(--accent);
+  --color-danger: var(--danger);
+  --color-info: var(--info);
+  --color-success: var(--success);
+  --color-warning: var(--warning);
 
   /* Logo Colors */
-  --color-decoration-base: #ff4057;
-  --color-decoration-background: #282634;
+  --color-decoration-base: var(--decoration-base);
+  --color-decoration-background: var(--decoration-background);
 
   --breakpoint-*: initial;
   --breakpoint-xs: 1024px;
