--- a/app/renderer/assets/fonts/Roboto.css
+++ b/app/renderer/assets/fonts/Roboto.css
@@ -1,19 +1,5 @@
 @font-face {
   font-family: Roboto;
-  src: url('Roboto/Roboto-Thin.ttf') format('truetype');
-  font-weight: 100;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: Roboto;
-  src: url('Roboto/Roboto-Light.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: Roboto;
   src: url('Roboto/Roboto-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
@@ -28,14 +14,14 @@
 
 @font-face {
   font-family: Roboto;
-  src: url('Roboto/Roboto-Bold.ttf') format('truetype');
-  font-weight: 700;
+  src: url('Roboto/Roboto-SemiBold.ttf') format('truetype');
+  font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: Roboto;
-  src: url('Roboto/Roboto-Black.ttf') format('truetype');
-  font-weight: 900;
+  src: url('Roboto/Roboto-Bold.ttf') format('truetype');
+  font-weight: 700;
   font-style: normal;
 }
