--- a/app/renderer/assets/fonts/Roboto.css
+++ b/app/renderer/assets/fonts/Roboto.css
@@ -1,27 +1,39 @@
 @font-face {
   font-family: Roboto;
-  src: url('Roboto/Roboto-Regular.ttf') format('truetype');
+  src:
+    local('Roboto'),
+    url('Roboto/Roboto-Regular.ttf') format('truetype');
+  font-display: swap;
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: Roboto;
-  src: url('Roboto/Roboto-Medium.ttf') format('truetype');
+  src:
+    local('Roboto'),
+    url('Roboto/Roboto-Medium.ttf') format('truetype');
+  font-display: swap;
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: Roboto;
-  src: url('Roboto/Roboto-SemiBold.ttf') format('truetype');
+  src:
+    local('Roboto'),
+    url('Roboto/Roboto-SemiBold.ttf') format('truetype');
+  font-display: swap;
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: Roboto;
-  src: url('Roboto/Roboto-Bold.ttf') format('truetype');
+  src:
+    local('Roboto'),
+    url('Roboto/Roboto-Bold.ttf') format('truetype');
+  font-display: swap;
   font-weight: 700;
   font-style: normal;
 }
